5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1863_1294.log
== TEST (2019-07-02 10:03:08) 
-- CODE:
from numpy import*
rom numpy.linalg import*
n = array(eval(input("Digite: ")))

mat = array([[10,12,9],[4,4,6],[2,1,1]])
print(mat)

-- ERROR:
File "XXXX", line 2
    rom numpy.linalg import*
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:03:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite: ")))

mat = array([[10,12,9],[4,4,6],[2,1,1]])
print(mat)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:07:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
n = n.T
print(n)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos



mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
v1 = zeros(,dtype=int)

for i in range(mat):
	
-- ERROR:
File "XXXX", line 13
    v1 = zeros(,dtype=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:08:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
n = n.T
print(n)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos



mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:08:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos



mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:11:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

print("laranja: ", round(n[0],1))

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:12:29) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

print("laranja: ", round(n[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:12:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

print("laranja: ", round(mat[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:13:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=int)

print("laranja: ", round(n[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:13:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=int)
print(t)
print("laranja: ", round(n[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:25) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=int)
v = 0 
for i in range(3):
	t[i] = sum(mat)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:15:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=int)
v = 0 
for i in range(3):
	t[i] = sum(mat)[0]



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=int)
v = 0 
for i in range(3):
	t[i] = shape(mat)[0]



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:16:37) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
for i in range(3):
	t[i] = shape(mat)[0]



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(n[1],1))
print("abacaxi: ", round(n[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
for i in range(3):
	t[i] = shape(mat)[0]



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:17:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
for i in range(3):
	t[i] = n[0]/mat[0]



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
for i in range(3):
	t[i] = 



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
File "XXXX", line 14
    t[i] = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = dot(inv(n),mat)
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
for i in range(3):
	t[i] = 



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
File "XXXX", line 14
    t[i] = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:18:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = dot(inv(n),mat)
print(m)
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 




print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 
m = dot(inv(n),mat)
print(m)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:19:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
v = 0 

print(m)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
for i in range(n):
	n[0] = n[0]/mat[0]
	

print(n)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:21:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)
for i in n:
	n[0] = n[0]/mat[0]
	

print(n)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:22:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

for i in n:
	n[i] = n[i] + n[i]/mat[i]
	

print(n)



print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:07) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)




print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),mat)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),mat)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:23:57) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),n)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:24:26) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(n),mar=t)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:24:31) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(n),mat)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:25:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),mat)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:25:40) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),mat)


print(t)
print("laranja: ", round(t[0],1))
print("manga: ", round(t[1],1))
print("abacaxi: ", round(t[2],1))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:14) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))
m = n.T
# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(m),t)


print(t)
print("laranja: ", round(t[0],0))
print("manga: ", round(t[1],0))
print("abacaxi: ", round(t[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:26:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(n),t)
print(c)

print(t)
print("laranja: ", round(t[0],0))
print("manga: ", round(t[1],0))
print("abacaxi: ", round(t[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:00) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja
t = zeros(3,dtype=float)

c = dot(inv(t),n)
print(c)

print(t)
print("laranja: ", round(t[0],0))
print("manga: ", round(t[1],0))
print("abacaxi: ", round(t[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja


c = dot(inv(mat),n.T)
print(c)

print(t)
print("laranja: ", round(t[0],0))
print("manga: ", round(t[1],0))
print("abacaxi: ", round(t[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:27:48) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja


c = dot(inv(mat),n.T)
print(c)


print("laranja: ", round(t[0],0))
print("manga: ", round(t[1],0))
print("abacaxi: ", round(t[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:28:03) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja


c = dot(inv(mat),n.T)
print(c)


print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:28:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

c = dot(inv(mat),n.T)

print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

c = dot(inv(mat),n.T)

print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
i =0
if c[0] == min(c[0]):
	print("laranja")
if c[1] == min(c[1]):
	print("manga")
if c[2] == min(c[2]):
	print("abacaxi")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

c = dot(inv(mat),n.T)

print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
i =0
if c[0] == min(c):
	print("laranja")
if c[1] == min(c[1]):
	print("manga")
if c[2] == min(c[2]):
	print("abacaxi")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 10:31:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

c = dot(inv(mat),n.T)

print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
i =0
if c[0] == min(c):
	print("laranja")
if c[1] == min(c):
	print("manga")
if c[2] == min(c):
	print("abacaxi")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 10:32:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(eval(input("Digite os minutos de cada processo: ")))

# x = lavagem minutos
# y = enchimento minutos
# z = rotulo minutos

mat = array([[10,12,9],[4,4,6],[2,1,1]])   #10,4,4 = laranja

c = dot(inv(mat),n.T)

print("laranja: ", round(c[0],0))
print("manga: ", round(c[1],0))
print("abacaxi: ", round(c[2],0))
i =0
if c[0] == min(c):
	print("laranja")
if c[1] == min(c):
	print("manga")
if c[2] == min(c):
	print("abacaxi")
-- EXECUTION TIME:
1.037
-- TEST CASE 1:
---- input:
[1545,630,155]
---- correct output:
laranja: 15.0
manga: 90.0
abacaxi: 35.0
laranja
---- user output:
laranja:  15.0
manga:  90.0
abacaxi:  35.0
laranja
-- TEST CASE 2:
---- input:
[60600,23376,6658]
---- correct output:
laranja: 1209.0
manga: 3450.0
abacaxi: 790.0
abacaxi
---- user output:
laranja:  1209.0
manga:  3450.0
abacaxi:  790.0
abacaxi
-- TEST CASE 3:
---- input:
[2745,1314,372]
---- correct output:
laranja: 99.0
manga: 63.0
abacaxi: 111.0
manga
---- user output:
laranja:  99.0
manga:  63.0
abacaxi:  111.0
manga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
